fix: removed background repeat

--- a/style.css
+++ b/style.css
@@ -17,4 +17,5 @@ body {
     background-image: url(https://p4.wallpaperbetter.com/wallpaper/754/917/296/manga-oyasumi-punpun-monochrome-punpun-onodera-wallpaper-preview.jpg);
     background-size: 100%;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
